--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,62 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+form {
+  text-align: center;
+}
+
+#root {
+  display: flex;
+  justify-content: center;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+
+  border: 2px solid black;
+  text-align: center;
+  font-weight: bold;
+  letter-spacing: 0.2rem;
+
+  width: 250px;
+}
+.list {
+  margin: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 20px;
+  margin: 10px;
+}
+h1 {
+  margin: 0px;
+}
+
+@media screen and (max-width: 450px) {
+  .list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0.5rem;
+  }
+  .container {
+    width: 130px;
+    font-size: 0.6rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  h1 {
+    font-size: 0.7rem;
+  }
+  input {
+    width: 80px;
+  }
+  img {
+    max-width: 80px;
+  }
 }
